compiler/test_files/typing/bad/testfile-unary_minus-1.psc
class S { i32 a; };
i32 main() { S s; return -s; }
